ec2.tf

data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  owners = ["099720109477"] # Ubuntu
}

resource "aws_instance" "web" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t2.micro"
  key_name      = "pitagoras"
  user_data     = file("install-docker")

  tags = {
    Name = "pitagoras"
  }

  vpc_security_group_ids = [
    aws_security_group.allow-ssh.id,
    aws_security_group.allow-http.id,
    aws_security_group.allow-https.id
  ]
}
